<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.PlaceholderFragment">

    <TextView
        android:id="@+id/out"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:indeterminate="false"
            android:text="@string/menu_scan" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:indeterminate="false"
            android:text="@string/menu_stop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:indeterminate="false"
            android:text="@string/init_serial_bt"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:indeterminate="false"
            android:text="@string/get_all_data" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sendlabel1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uvi"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sendcontent1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:text="@string/_10" />

        <Button
            android:id="@+id/sendbutton1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />

        <ImageView
            android:id="@+id/sendstatus1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/green_checkmark"
            android:visibility="invisible"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sendlabel2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/steps"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/sendcontent2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/_10"
            android:hint="@string/value"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/sendbutton2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />

        <ImageView
            android:id="@+id/sendstatus2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/green_checkmark"
            android:visibility="invisible"
            android:contentDescription="@string/todo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sendlabel3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/co2"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/sendcontent3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@string/_10"
            android:hint="@string/value"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/sendbutton3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send" />

        <ImageView
            android:id="@+id/sendstatus3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/green_checkmark"
            android:visibility="invisible"
            android:contentDescription="@string/todo" />

    </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="302dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/sendlabel4"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/voc"-->
                <!--android:textSize="18sp"/>-->

            <!--<EditText-->
                <!--android:id="@+id/sendcontent4"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ems="10"-->
                <!--android:inputType="numberDecimal"-->
                <!--android:text="@string/_10"-->
                <!--android:hint="@string/value"-->
                <!--android:importantForAutofill="no" />-->

            <!--<Button-->
                <!--android:id="@+id/sendbutton4"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/send" />-->

            <!--<TextView-->
                <!--android:id="@+id/sendstatus4"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/done" />-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="302dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/sendlabel5"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/temp"-->
                <!--android:textSize="18sp"/>-->

            <!--<EditText-->
                <!--android:id="@+id/sendcontent5"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ems="10"-->
                <!--android:inputType="numberDecimal"-->
                <!--android:text="@string/_10"-->
                <!--android:hint="@string/value"-->
                <!--android:importantForAutofill="no" />-->

            <!--<Button-->
                <!--android:id="@+id/sendbutton5"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/send" />-->

            <!--<TextView-->
                <!--android:id="@+id/sendstatus5"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/done" />-->

        <!--</LinearLayout>-->

        <LinearLayout
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
        android:id="@+id/sendlabel6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/uvi_dur1"
        android:textSize="18sp"/>

        <EditText
        android:id="@+id/sendcontent6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_10"
        android:hint="@string/value"
        android:importantForAutofill="no" />

        <Button
        android:id="@+id/sendbutton6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/send" />

            <ImageView
                android:id="@+id/sendstatus6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/green_checkmark"
                android:visibility="invisible"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="302dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
                <!--android:id="@+id/sendlabel7"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/sunscreen"-->
                <!--android:textSize="18sp"/>-->

            <!--<EditText-->
                <!--android:id="@+id/sendcontent7"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:ems="10"-->
                <!--android:inputType="numberDecimal"-->
                <!--android:text="@string/_10"-->
                <!--android:hint="@string/value"-->
                <!--android:importantForAutofill="no" />-->

            <!--<Button-->
                <!--android:id="@+id/sendbutton7"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/send" />-->

            <!--<TextView-->
                <!--android:id="@+id/sendstatus7"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/done" />-->

        <!--</LinearLayout>-->

        </LinearLayout>
</ScrollView>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginTop="10dp" >
    </ListView>

</LinearLayout>